# pchain-runtime

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md  WIP-README.md
src/: context.rs  cost.rs  error.rs  formulas.rs  gas.rs  lib.rs  params.rs  read_write_set.rs  rewards_formulas.rs  transition.rs  types.rs  world_state_cache.rs
src/commands/: account.rs  executable.rs  mod.rs  protocol.rs  staking.rs
src/contract/: cbi.rs  cbi_host_functions.rs  cbi_version.rs  context.rs  functions.rs  host_functions.rs  instance.rs  mod.rs  module.rs  version.rs
src/contract/wasmer/: cache.rs  custom_tunables.rs  env.rs  instance.rs  memory.rs  mod.rs  module.rs  non_determinism_filter.rs  store.rs
src/execution/: abort.rs  account.rs  contract.rs  execute.rs  execute_next_epoch.rs  execute_view.rs  gas_meter.rs  internal.rs  mod.rs  phase.rs  protocol.rs  runtime_gas_meter.rs  staking.rs  state.rs
src/execution/cache/: command_output_cache.rs  mod.rs  output_buffer.rs  receipt_buffer.rs  receipt_cache.rs  world_state_cache.rs
src/execution/execute_commands/: executor.rs  mod.rs  phases.rs
src/execution/gas/: cost_change.rs  gas_meter.rs  mod.rs  operation.rs  wasmer_gas.rs  wasmer_gas_meter.rs
src/execution/tests/: basic.rs  next_epoch.rs  pool.rs  staking.rs  test_utils.rs
src/execution/transactions/: abort.rs  execute_commands.rs  mod.rs  phases.rs  test.rs
src/execution/transactions/tests/: basic.rs  next_epoch.rs  pool.rs  staking.rs  test_utils.rs
src/gas/: constants.rs  cost_change.rs  gas_meter.rs  mod.rs  operations.rs  wasmer_gas.rs
src/transactions/: account.rs  administration.rs  execute.rs  internal.rs  mod.rs  network.rs  phase.rs
src/wasmer/: cache.rs  custom_tunables.rs  mod.rs  non_determinism_filter.rs  wasmer_env.rs  wasmer_memory.rs  wasmer_store.rs
tests/: ctoc.rs  ctoe.rs  gas_limits.rs  sdk.rs  transition.rs  view.rs
tests/common/: contract.rs  gas.rs  mod.rs  simulate_world_state.rs  test_data.rs
tests/contracts/: README.md  all_features.wasm  all_features_points_to_v05_address.wasm  bare_contract.wasm  basic_contract.wasm  invalid_entrypoint_contract.wasm  invalid_non_deterministic.wasm
