[package]
name = "pchain-runtime"
version = "0.4.4"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-runtime: ParallelChain Mainnet Runtime for state transition in ParallelChain Mainnet"
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-runtime"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
ed25519-dalek = "1.0.1"
keccak-hasher = "0.15.3"
loupe = "0.1"
pchain-types = "0.4"
pchain-world-state = { git = "https://github.com/parallelchain-io/pchain-world-state" }
ripemd = "0.1.1"
sha2 = "0.10.0"
tiny-keccak = "2.0.2"
thiserror = "1.0"
wasmer = "=2.3.0"
wasmer-cache = "=2.3.0"
wasmer-compiler-singlepass = "=2.3.0"
wasmer-engine-universal = "=2.3.0"
wasmer-middlewares = "=2.3.0"
wasmer-vm = "=2.3.0"
wasmer-wasi = "=2.3.0"

[dev-dependencies]
base64url = "0.1.0"
borsh = "0.10.2"
wat = "1.0.73"

[profile.release]
overflow-checks = true
